Updated Java version from 24 to 25, and huggingface tokenizer version from 0.27 to 0.32. Finally, added new compiler arguments to include module-path during run time, as well as enabled preview features.